lyon/uri.rl.cc

#line 1 "/home/lyon/code/C++/lyon/lyon/uri.rl"
#include "uri.h"
#include <sstream>
namespace lyon {


#line 9 "/home/lyon/code/C++/lyon/lyon/uri.rl.cc"
static const int uri_parser_start = 453;
static const int uri_parser_first_final = 453;
static const int uri_parser_error = 0;

static const int uri_parser_en_main = 453;


#line 125 "/home/lyon/code/C++/lyon/lyon/uri.rl"


Uri::ptr Uri::Parser(const std::string &uristr) {
    Uri::ptr uri(new Uri());
    int cs = 0;
    const char *mark = 0;
    
#line 25 "/home/lyon/code/C++/lyon/lyon/uri.rl.cc"
	{
	cs = uri_parser_start;
	}

#line 132 "/home/lyon/code/C++/lyon/lyon/uri.rl"
    const char *p = uristr.c_str();
    const char *pe = p + uristr.size();
    const char *eof = pe;
    
#line 35 "/home/lyon/code/C++/lyon/lyon/uri.rl.cc"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 453:
	switch( (*p) ) {
		case 34: goto st0;
		case 35: goto st455;
		case 37: goto st3;
		case 47: goto st460;
		case 58: goto st0;
		case 60: goto st0;
		case 62: goto st0;
		case 63: goto st458;
		case 96: goto st0;
		case 127: goto st0;
	}
	if ( (*p) < 91 ) {
		if ( (*p) > 32 ) {
			if ( 65 <= (*p) && (*p) <= 90 )
				goto tr461;
		} else if ( (*p) >= 0 )
			goto st0;
	} else if ( (*p) > 94 ) {
		if ( (*p) > 122 ) {
			if ( 123 <= (*p) && (*p) <= 125 )
				goto st0;
		} else if ( (*p) >= 97 )
			goto tr461;
	} else
		goto st0;
	goto st454;
st454:
	if ( ++p == pe )
		goto _test_eof454;
case 454:
	switch( (*p) ) {
		case 34: goto st0;
		case 35: goto st455;
		case 37: goto st3;
		case 47: goto st457;
		case 58: goto st0;
		case 60: goto st0;
		case 62: goto st0;
		case 63: goto st458;
		case 96: goto st0;
		case 127: goto st0;
	}
	if ( (*p) < 91 ) {
		if ( 0 <= (*p) && (*p) <= 32 )
			goto st0;
	} else if ( (*p) > 94 ) {
		if ( 123 <= (*p) && (*p) <= 125 )
			goto st0;
	} else
		goto st0;
	goto st454;
st0:
cs = 0;
	goto _out;
tr467:
#line 17 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{ mark = p; }
#line 96 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        // std::cout << std::string(mark, fpc - mark) << std::endl;
        uri->setQuery(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st455;
tr469:
#line 96 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        // std::cout << std::string(mark, fpc - mark) << std::endl;
        uri->setQuery(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st455;
tr475:
#line 18 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{ mark = p; }
#line 40 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        if (mark != NULL) {
            // std::cout << std::string(mark, fpc - mark) << std::endl;
            uri->setHost(std::string(mark, p - mark));
        }
    }
	goto st455;
tr486:
#line 40 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        if (mark != NULL) {
            // std::cout << std::string(mark, fpc - mark) << std::endl;
            uri->setHost(std::string(mark, p - mark));
        }
    }
	goto st455;
tr490:
#line 18 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{ mark = p; }
#line 27 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        if (p != mark) {
            uri->setPort(atoi(mark));
        }
        mark = NULL;
    }
	goto st455;
tr494:
#line 27 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        if (p != mark) {
            uri->setPort(atoi(mark));
        }
        mark = NULL;
    }
	goto st455;
tr554:
#line 18 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{ mark = p; }
#line 40 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        if (mark != NULL) {
            // std::cout << std::string(mark, fpc - mark) << std::endl;
            uri->setHost(std::string(mark, p - mark));
        }
    }
#line 73 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        // std::cout << std::string(mark, fpc - mark) << std::endl;
        uri->setPath(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st455;
tr565:
#line 40 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        if (mark != NULL) {
            // std::cout << std::string(mark, fpc - mark) << std::endl;
            uri->setHost(std::string(mark, p - mark));
        }
    }
#line 18 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{ mark = p; }
#line 73 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        // std::cout << std::string(mark, fpc - mark) << std::endl;
        uri->setPath(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st455;
tr569:
#line 73 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        // std::cout << std::string(mark, fpc - mark) << std::endl;
        uri->setPath(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st455;
tr572:
#line 18 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{ mark = p; }
#line 27 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        if (p != mark) {
            uri->setPort(atoi(mark));
        }
        mark = NULL;
    }
#line 73 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        // std::cout << std::string(mark, fpc - mark) << std::endl;
        uri->setPath(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st455;
tr576:
#line 27 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        if (p != mark) {
            uri->setPort(atoi(mark));
        }
        mark = NULL;
    }
#line 18 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{ mark = p; }
#line 73 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        // std::cout << std::string(mark, fpc - mark) << std::endl;
        uri->setPath(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st455;
st455:
	if ( ++p == pe )
		goto _test_eof455;
case 455:
#line 235 "/home/lyon/code/C++/lyon/lyon/uri.rl.cc"
	switch( (*p) ) {
		case 37: goto tr463;
		case 60: goto st0;
		case 62: goto st0;
		case 96: goto st0;
		case 127: goto st0;
	}
	if ( (*p) < 34 ) {
		if ( 0 <= (*p) && (*p) <= 32 )
			goto st0;
	} else if ( (*p) > 35 ) {
		if ( (*p) > 94 ) {
			if ( 123 <= (*p) && (*p) <= 125 )
				goto st0;
		} else if ( (*p) >= 91 )
			goto st0;
	} else
		goto st0;
	goto tr462;
tr462:
#line 17 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{ mark = p; }
	goto st456;
st456:
	if ( ++p == pe )
		goto _test_eof456;
case 456:
#line 263 "/home/lyon/code/C++/lyon/lyon/uri.rl.cc"
	switch( (*p) ) {
		case 37: goto st1;
		case 60: goto st0;
		case 62: goto st0;
		case 96: goto st0;
		case 127: goto st0;
	}
	if ( (*p) < 34 ) {
		if ( 0 <= (*p) && (*p) <= 32 )
			goto st0;
	} else if ( (*p) > 35 ) {
		if ( (*p) > 94 ) {
			if ( 123 <= (*p) && (*p) <= 125 )
				goto st0;
		} else if ( (*p) >= 91 )
			goto st0;
	} else
		goto st0;
	goto st456;
tr463:
#line 17 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{ mark = p; }
	goto st1;
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
#line 291 "/home/lyon/code/C++/lyon/lyon/uri.rl.cc"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st2;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st2;
	} else
		goto st2;
	goto st0;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st456;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st456;
	} else
		goto st456;
	goto st0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st4;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st4;
	} else
		goto st4;
	goto st0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st454;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st454;
	} else
		goto st454;
	goto st0;
tr477:
#line 18 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{ mark = p; }
#line 40 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        if (mark != NULL) {
            // std::cout << std::string(mark, fpc - mark) << std::endl;
            uri->setHost(std::string(mark, p - mark));
        }
    }
	goto st457;
tr487:
#line 40 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        if (mark != NULL) {
            // std::cout << std::string(mark, fpc - mark) << std::endl;
            uri->setHost(std::string(mark, p - mark));
        }
    }
	goto st457;
tr491:
#line 18 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{ mark = p; }
#line 27 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        if (p != mark) {
            uri->setPort(atoi(mark));
        }
        mark = NULL;
    }
	goto st457;
tr495:
#line 27 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        if (p != mark) {
            uri->setPort(atoi(mark));
        }
        mark = NULL;
    }
	goto st457;
st457:
	if ( ++p == pe )
		goto _test_eof457;
case 457:
#line 384 "/home/lyon/code/C++/lyon/lyon/uri.rl.cc"
	switch( (*p) ) {
		case 34: goto st0;
		case 35: goto st455;
		case 37: goto st5;
		case 60: goto st0;
		case 62: goto st0;
		case 63: goto st458;
		case 96: goto st0;
		case 127: goto st0;
	}
	if ( (*p) < 91 ) {
		if ( 0 <= (*p) && (*p) <= 32 )
			goto st0;
	} else if ( (*p) > 94 ) {
		if ( 123 <= (*p) && (*p) <= 125 )
			goto st0;
	} else
		goto st0;
	goto st457;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st6;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st6;
	} else
		goto st6;
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st457;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st457;
	} else
		goto st457;
	goto st0;
tr483:
#line 18 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{ mark = p; }
#line 40 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        if (mark != NULL) {
            // std::cout << std::string(mark, fpc - mark) << std::endl;
            uri->setHost(std::string(mark, p - mark));
        }
    }
	goto st458;
tr489:
#line 40 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        if (mark != NULL) {
            // std::cout << std::string(mark, fpc - mark) << std::endl;
            uri->setHost(std::string(mark, p - mark));
        }
    }
	goto st458;
tr493:
#line 18 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{ mark = p; }
#line 27 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        if (p != mark) {
            uri->setPort(atoi(mark));
        }
        mark = NULL;
    }
	goto st458;
tr497:
#line 27 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        if (p != mark) {
            uri->setPort(atoi(mark));
        }
        mark = NULL;
    }
	goto st458;
tr562:
#line 18 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{ mark = p; }
#line 40 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        if (mark != NULL) {
            // std::cout << std::string(mark, fpc - mark) << std::endl;
            uri->setHost(std::string(mark, p - mark));
        }
    }
#line 73 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        // std::cout << std::string(mark, fpc - mark) << std::endl;
        uri->setPath(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st458;
tr568:
#line 40 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        if (mark != NULL) {
            // std::cout << std::string(mark, fpc - mark) << std::endl;
            uri->setHost(std::string(mark, p - mark));
        }
    }
#line 18 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{ mark = p; }
#line 73 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        // std::cout << std::string(mark, fpc - mark) << std::endl;
        uri->setPath(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st458;
tr571:
#line 73 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        // std::cout << std::string(mark, fpc - mark) << std::endl;
        uri->setPath(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st458;
tr575:
#line 18 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{ mark = p; }
#line 27 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        if (p != mark) {
            uri->setPort(atoi(mark));
        }
        mark = NULL;
    }
#line 73 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        // std::cout << std::string(mark, fpc - mark) << std::endl;
        uri->setPath(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st458;
tr579:
#line 27 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        if (p != mark) {
            uri->setPort(atoi(mark));
        }
        mark = NULL;
    }
#line 18 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{ mark = p; }
#line 73 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        // std::cout << std::string(mark, fpc - mark) << std::endl;
        uri->setPath(std::string(mark, p - mark));
        mark = NULL;
    }
	goto st458;
st458:
	if ( ++p == pe )
		goto _test_eof458;
case 458:
#line 550 "/home/lyon/code/C++/lyon/lyon/uri.rl.cc"
	switch( (*p) ) {
		case 34: goto st0;
		case 35: goto tr467;
		case 37: goto tr468;
		case 60: goto st0;
		case 62: goto st0;
		case 96: goto st0;
		case 127: goto st0;
	}
	if ( (*p) < 91 ) {
		if ( 0 <= (*p) && (*p) <= 32 )
			goto st0;
	} else if ( (*p) > 94 ) {
		if ( 123 <= (*p) && (*p) <= 125 )
			goto st0;
	} else
		goto st0;
	goto tr466;
tr466:
#line 17 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{ mark = p; }
	goto st459;
st459:
	if ( ++p == pe )
		goto _test_eof459;
case 459:
#line 577 "/home/lyon/code/C++/lyon/lyon/uri.rl.cc"
	switch( (*p) ) {
		case 34: goto st0;
		case 35: goto tr469;
		case 37: goto st7;
		case 60: goto st0;
		case 62: goto st0;
		case 96: goto st0;
		case 127: goto st0;
	}
	if ( (*p) < 91 ) {
		if ( 0 <= (*p) && (*p) <= 32 )
			goto st0;
	} else if ( (*p) > 94 ) {
		if ( 123 <= (*p) && (*p) <= 125 )
			goto st0;
	} else
		goto st0;
	goto st459;
tr468:
#line 17 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{ mark = p; }
	goto st7;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
#line 604 "/home/lyon/code/C++/lyon/lyon/uri.rl.cc"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st8;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st8;
	} else
		goto st8;
	goto st0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st459;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st459;
	} else
		goto st459;
	goto st0;
st460:
	if ( ++p == pe )
		goto _test_eof460;
case 460:
	switch( (*p) ) {
		case 34: goto st0;
		case 35: goto st455;
		case 37: goto st5;
		case 47: goto st461;
		case 60: goto st0;
		case 62: goto st0;
		case 63: goto st458;
		case 96: goto st0;
		case 127: goto st0;
	}
	if ( (*p) < 91 ) {
		if ( 0 <= (*p) && (*p) <= 32 )
			goto st0;
	} else if ( (*p) > 94 ) {
		if ( 123 <= (*p) && (*p) <= 125 )
			goto st0;
	} else
		goto st0;
	goto st457;
st461:
	if ( ++p == pe )
		goto _test_eof461;
case 461:
	switch( (*p) ) {
		case 2: goto tr472;
		case 32: goto tr473;
		case 33: goto tr474;
		case 35: goto tr475;
		case 37: goto tr476;
		case 47: goto tr477;
		case 49: goto tr479;
		case 50: goto tr480;
		case 57: goto tr481;
		case 58: goto tr482;
		case 59: goto tr474;
		case 61: goto tr474;
		case 63: goto tr483;
		case 64: goto tr484;
		case 91: goto tr485;
		case 95: goto tr474;
		case 126: goto tr474;
	}
	if ( (*p) < 48 ) {
		if ( 36 <= (*p) && (*p) <= 46 )
			goto tr474;
	} else if ( (*p) > 56 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr474;
		} else if ( (*p) >= 65 )
			goto tr474;
	} else
		goto tr478;
	goto st0;
tr472:
#line 18 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{ mark = p; }
	goto st9;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
#line 694 "/home/lyon/code/C++/lyon/lyon/uri.rl.cc"
	switch( (*p) ) {
		case 32: goto st10;
		case 48: goto st10;
		case 52: goto st10;
	}
	goto st0;
tr473:
#line 18 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{ mark = p; }
	goto st10;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
#line 709 "/home/lyon/code/C++/lyon/lyon/uri.rl.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st11;
	goto st0;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	if ( (*p) == 46 )
		goto st12;
	goto st0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	switch( (*p) ) {
		case 2: goto st13;
		case 32: goto st14;
		case 49: goto st28;
		case 50: goto st30;
		case 57: goto st29;
	}
	if ( 48 <= (*p) && (*p) <= 56 )
		goto st15;
	goto st0;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
	switch( (*p) ) {
		case 32: goto st14;
		case 48: goto st14;
		case 52: goto st14;
	}
	goto st0;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st15;
	goto st0;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	if ( (*p) == 46 )
		goto st16;
	goto st0;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
	switch( (*p) ) {
		case 2: goto st17;
		case 32: goto st18;
		case 49: goto st24;
		case 50: goto st26;
		case 57: goto st25;
	}
	if ( 48 <= (*p) && (*p) <= 56 )
		goto st19;
	goto st0;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
	switch( (*p) ) {
		case 32: goto st18;
		case 48: goto st18;
		case 52: goto st18;
	}
	goto st0;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st19;
	goto st0;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
	if ( (*p) == 46 )
		goto st20;
	goto st0;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
	switch( (*p) ) {
		case 2: goto st21;
		case 32: goto st22;
		case 49: goto st465;
		case 50: goto st467;
		case 57: goto st466;
	}
	if ( 48 <= (*p) && (*p) <= 56 )
		goto st462;
	goto st0;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
	switch( (*p) ) {
		case 32: goto st22;
		case 48: goto st22;
		case 52: goto st22;
	}
	goto st0;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st462;
	goto st0;
st462:
	if ( ++p == pe )
		goto _test_eof462;
case 462:
	switch( (*p) ) {
		case 35: goto tr486;
		case 47: goto tr487;
		case 58: goto tr488;
		case 63: goto tr489;
	}
	goto st0;
tr508:
#line 18 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{ mark = p; }
#line 40 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        if (mark != NULL) {
            // std::cout << std::string(mark, fpc - mark) << std::endl;
            uri->setHost(std::string(mark, p - mark));
        }
    }
	goto st463;
tr488:
#line 40 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{
        if (mark != NULL) {
            // std::cout << std::string(mark, fpc - mark) << std::endl;
            uri->setHost(std::string(mark, p - mark));
        }
    }
	goto st463;
st463:
	if ( ++p == pe )
		goto _test_eof463;
case 463:
#line 862 "/home/lyon/code/C++/lyon/lyon/uri.rl.cc"
	switch( (*p) ) {
		case 35: goto tr490;
		case 47: goto tr491;
		case 63: goto tr493;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr492;
	goto st0;
tr492:
#line 18 "/home/lyon/code/C++/lyon/lyon/uri.rl"
	{ mark = p; }
	goto st464;
st464:
	if ( ++p == pe )
		goto _test_eof464;
case 464:
#line 879 "/home/lyon/code/C++/lyon/lyon/uri.rl.cc"
	switch( (*p) ) {
		case 35: goto tr494;
		case 47: goto tr495;
		case 63: goto tr497;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st464;
	goto st0;
st465:
	if ( ++p == pe )
		goto _test_eof465;
case 465:
	switch( (*p) ) {
		case 35: goto tr486;
		case 47: goto tr487;
		case 58: goto tr488;
		case 63: goto tr489;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st466;
	goto st0;
st466:
	if ( ++p == pe )
		goto _test_eof466;
case 466:
	switch( (*p) ) {
		case 35: goto tr486;
		case 47: goto tr487;
		case 58: goto tr488;
		case 63: goto tr489;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st462;
	goto st0;
st467:
	if ( ++p == pe )
		goto _test_eof467;
case 467:
	switch( (*p) ) {
		case 35: goto tr486;
		case 47: goto tr487;
		case 53: goto st23;
		case 58: goto tr488;
		case 63: goto tr489;
	}
	goto st0;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
	switch( (*p) ) {
		case 32: goto st462;
		case 48: goto st462;
		case 53: goto st462;
	}
	goto st0;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
	if ( (*p) == 46 )
		goto st20;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st25;
	goto st0;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
	if ( (*p) == 46 )
		goto st20;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st19;
	goto st0;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	switch( (*p) ) {
		case 46: goto st20;
		case 53: goto st27;
	}
	goto st0;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
	switch( (*p) ) {
		case 32: goto st19;
		case 48: goto st19;
		case 53: goto st19;
	}
	goto st0;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
	if ( (*p) == 46 )
		goto st16;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st29;
	goto st0;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
	if ( (*p) == 46 )
		goto st16;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st15;
	goto st0;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
	switch( (*p) ) {
		case 46: goto st16;
		case 53: goto st31;
	}
	goto st0;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
